updated blog header and template

--- a/template/blog.html
+++ b/template/blog.html
@@ -4,7 +4,6 @@
 <head>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="css/index.css" class="rel">
-    <link rel="stylesheet" href="/template/blog.html" class="rel">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link href='https://fontsg.googleapis.com/css?family=Enriqueta:400,700' rel='stylesheet' type='text/css'>
@@ -36,7 +35,7 @@
     </div>
     <!--////////// Nav bar ends /////////////-->
     <div class="banner">
-        <img src="img/pentagon3.png" class="img-responsive" alt="header">
+        <img src="img/blog_header.jpg" class="img-responsive" alt="header">
     </div>
     <!-- <h1 class="title">Hey, my name is Kristen Leake</h1>
     <p>I build websites & apps</p> -->
