added sass styling and linked tall pages

--- a/css/index.css
+++ b/css/index.css
@@ -1,249 +1,132 @@
-a {
-    text-decoration: none;
-}
-
+@import url(venders/hover.css);
 #bs-example-collapse-navbar1 {
-    float: left;
-    letter-spacing: 2px;
-}
+  float: left;
+  letter-spacing: 2px; }
 
-footer {
-    background-color: rgb(215, 248, 211);
+a {
+  text-decoration: none;
+  color: #68726b !important; }
+
+li {
+  display: inline-flex;
+  position: relative;
+  line-height: 3em;
+  font-color: #5f5e5f;
+  font-family: 'Enriqueta', serif;
+  font-weight: 300;
+  font-size: 20px;
+  margin-left: 20px; }
+
+#home {
+    /*social-icon {
+    float: right;
+}*/
+  /*///// Social Media Styling /////*/
+  @import url(http://fonts.googleapis.com/css?family=Lato);
+  @import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css); }
+  #home a {
+    text-decoration: none; }
+  #home footer {
+    background-color: #d7f8d3;
     height: 80px;
     display: flex;
     /*justify-content: space-between;*/
-    text-align: center;
-}
-
-body {
-    /*    background-color: rgb(149, 149, 149);*/
-}
-
-li {
-    display: inline-flex;
-    position: relative;
-    line-height: 3em;
-    font-color: rgb(95, 94, 95);
-    font-family: 'Enriqueta', serif;
-    font-weight: 300;
-    font-size: 20px;
-    margin-left: 20px;
-}
-
-.title {
+    text-align: center; }
+  #home body {
+    /*    background-color: rgb(149, 149, 149);*/ }
+  #home .title {
     padding-top: 90px;
     margin-top: 0px;
     margin-bottom: 0px;
-    background-color: rgb(149, 149, 149);
-}
-
-p {
+    background-color: #959595; }
+  #home p {
     font-family: 'Enriqueta', serif;
     font-weight: 700;
     float: left;
-    top: 10px;
-}
-
-/*social-icon {
-    float: right;
-}*/
-.subtitle {
-    padding-top: 100px
-}
-
-ul {
+    top: 10px; }
+  #home .subtitle {
+    padding-top: 100px; }
+  #home ul {
     float: right;
     text-transform: lowercase;
-    padding-top: 80px;
-}
-
-.banner {
+    padding-top: 80px; }
+  #home .banner {
     padding: 0px;
-    /*    background-color: rgb(149, 149, 149);
-*/
-}
-
-#thumbnails {
-
+        /*    background-color: rgb(149, 149, 149);
+*/ }
+  #home #thumbnails {
     padding-top: 0px;
-    background-color: rgb(149, 149, 149);
+    background-color: #959595;
     margin-left: 0px;
     margin-right: 0px;
-    padding: 0px 0px 0px 0px;
-}
-
-.container-fluid {
-    background-color: rgb(149, 149, 149);
-}
-
-
-/* Float Shadow */
-
-.hvr-float-shadow {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: translateZ(0);
-    rgb(149, 149, 149);
-    transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -moz-osx-font-smoothing: grayscale;
-    position: relative;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-}
-
-.hvr-float-shadow:before {
-    pointer-events: none;
-    position: absolute;
-    z-index: -1;
-    content: '';
-    top: 100%;
-    left: 5%;
-    height: 0px;
-    width: 90%;
-    opacity: 0;
-    background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
-    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
-    /* W3C */
-    -webkit-transition-duration: 0.2s;
-    transition-duration: 0.2s;
-    -webkit-transition-property: transform, opacity;
-    transition-property: transform, opacity;
-}
-
-.hvr-float-shadow:hover,
-.hvr-float-shadow:focus,
-.hvr-float-shadow:active {
-    -webkit-transform: translateY(-5px);
-    transform: translateY(-30px);
-    /* move the element up by 5px */
-}
-
-.hvr-float-shadow:hover:before,
-.hvr-float-shadow:focus:before,
-.hvr-float-shadow:active:before {
-    opacity: 1;
-    -webkit-transform: translateY(5px);
-    transform: translateY(5px);
-    /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
-}
-
-
-/*///// Social Media Styling /////*/
-
-@import url(http://fonts.googleapis.com/css?family=Lato);
-@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
-
-
-body {
-  font-family: 'Lato', sans-serif;
-  color: #FFF;
-  background: #322f30;
-  -webkit-font-smoothing: antialiased;
-}
-
-a {
-    text-decoration: none;
-    color: #fff;
-}
-
-p > a:hover{
+    padding: 0px 0px 0px 0px; }
+  #home .container-fluid {
+    background-color: #959595; }
+  #home body {
+    font-family: 'Lato', sans-serif;
+    color: #FFF;
+    background: #322f30;
+    -webkit-font-smoothing: antialiased; }
+  #home p > a:hover {
     color: #d9d9d9;
-    text-decoration:  underline;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin:  1% 0 1% 0;
-}
-
-
-
-._12 {
-    font-size: 1.2em;
-
-}
-
-._14 {
-    font-size: 1.4em;
-
-}
-
-ul {
-    padding:0;
-    list-style: none;
-}
-
-.footer-social-icons {
+    text-decoration: underline; }
+  #home h1,
+  #home h2,
+  #home h3,
+  #home h4,
+  #home h5,
+  #home h6 {
+    margin: 1% 0 1% 0; }
+  #home ._12 {
+    font-size: 1.2em; }
+  #home ._14 {
+    font-size: 1.4em; }
+  #home ul {
+    padding: 0;
+    list-style: none; }
+  #home .footer-social-icons {
     width: 350px;
-    display:block;
-  margin: 0 auto;
-}
-
-.social-icon {
-    color: #fff;
-}
-
-ul.social-icons {   
-    margin-top: 10px;
-
-}
-
-.social-icons li {
+    display: block;
+    margin: 0 auto; }
+  #home .social-icon {
+    color: #fff; }
+  #home ul.social-icons {
+    margin-top: 10px; }
+  #home .social-icons li {
     vertical-align: top;
-    display: inline;
-}
-
-.social-icons a {
-    color: #fff; 
-    text-decoration: none;
-}
-
-.fa-twitter {
-    padding:10px 10px 7px 10px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
+    display: inline; }
+  #home .social-icons a {
+    color: #fff;
+    text-decoration: none; }
+  #home .fa-twitter {
+    padding: 10px 10px 7px 10px;
+    -o-transition: .5s;
+    -ms-transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
     transition: .5s;
-    background-color: rgb(95, 94, 95);
-}
-
-.fa-twitter:hover {
-    background-color: #00aced;
-}
-
-.fa-youtube {
-    padding:10px 12px 7px 11px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
+    background-color: #5f5e5f; }
+  #home .fa-twitter:hover {
+    background-color: #00aced; }
+  #home .fa-youtube {
+    padding: 10px 12px 7px 11px;
+    -o-transition: .5s;
+    -ms-transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
     transition: .5s;
-    background-color: rgb(95, 94, 95);
-}
-
-.fa-youtube:hover {
-    background-color: #e64a41;
-}
-
-.fa-linkedin {
-    padding:10px 11px 8px 11px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
+    background-color: #5f5e5f; }
+  #home .fa-youtube:hover {
+    background-color: #e64a41; }
+  #home .fa-linkedin {
+    padding: 10px 11px 8px 11px;
+    -o-transition: .5s;
+    -ms-transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
     transition: .5s;
-    background-color: rgb(95, 94, 95);
-}
+    background-color: #5f5e5f; }
+  #home .fa-linkedin:hover {
+    background-color: #0073a4; }
 
-.fa-linkedin:hover {
-    background-color: #0073a4;
-}
+/*# sourceMappingURL=index.css.map */
