--- a/template/portfolio.html
+++ b/template/portfolio.html
@@ -2,17 +2,18 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="../css/portfolio.css" class="rel">
+    <link rel="stylesheet" href="../css/index.css" class="rel">
     <link rel="stylesheet" href="portfolio.js" class="rel">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Enriqueta:400,700' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
-    <!-- //// PORTFOLIO BEGINS //// -->
-<!-- /////// THUMBNAILS ////// -->
-    <!-- MAKE THESE THUMBNAILS HAVE ROUNDED CORNERS! -->
-       
+    <div id="portfolio">
+        <!-- //// PORTFOLIO BEGINS //// -->
+        <!-- /////// THUMBNAILS ////// -->
+        <!-- MAKE THESE THUMBNAILS HAVE ROUNDED CORNERS! -->
         <div id="project1" class="col-xs-6 col-sm-4">
             <a href="About.html">
                 <div class="button hvr-float-shadow">
@@ -20,13 +21,13 @@
                 </div>
             </a>
         </div>
-      <div id="project2" class="col-xs-6 col-sm-4">
+        <div id="project2" class="col-xs-6 col-sm-4">
             <a href="portfolio.html">
                 <div class="button hvr-float-shadow">
                     <img src="img/Revolution_Revisited.png" alt="Revolution" class="img-responsive" width="387" height="275">
                 </div>
             </a>
-      </div> 
+        </div>
         <div id="project3" class="col-xs-6 col-sm-4">
             <a href="blog.html">
                 <div class="button hvr-float-shadow">
@@ -41,36 +42,7 @@
                 </div>
             </a>
         </div>
-
-   <!--  //// PORTFOLIO ENDS //// -->
-</body>
+        <!--  //// PORTFOLIO ENDS //// -->
 
 
-
-
-
-        <footer>
-        <p>© Kristen Leake Creative, LLC 2016
-  <ul>
-    <li><a href="#home">Home</li></a>
-    <li><a href="About.html">About</a></li>
-    <li><a href="#portfolio">Portfolio</a></li>
-    <li><a href="#blog">Blog</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
- 
-
-<!-- ///// Social Media Links ///// -->
-  <div class="footer-social-icons">
-                <h4 class="_14">Follow me on</h4>
-                <ul class="social-icons">
-                  <li><a href="https://www.facebook.com/kristen.leake.5" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-                  <li><a href="https://twitter.com/Kristen_Leake" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-                  <li><a href="https://www.youtube.com/channel/UCa7Jny01FDsAD5M2zid1znw" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
-                  <li><a href="https://www.linkedin.com/in/kristennleake"> <i class="fa fa-linkedin"></i></a></li>
-                </ul>
-              </div>
-<!-- ///// Social Media Links End ////// -->
-</footer>
-</html>
 </html>
