--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,23 +1,74 @@
 #bs-example-collapse-navbar1 {
     float: left;
     letter-spacing: 2px;
-    
 }
 
 @import 'venders/hover.css';
-
 a {
     text-decoration: none;
     color: rgb(104, 114, 107) !important;
 }
 
 li {
-        display: inline-flex;
-        position: relative;
-        line-height: 3em;
-        font-color: rgb(95, 94, 95);
-        font-family: 'Enriqueta', serif;
-        font-weight: 300;
-        font-size: 20px;
-        margin-left: 20px;
-    }
+    display: inline-flex;
+    position: relative;
+    line-height: 3em;
+    font-color: rgb(95, 94, 95);
+    font-family: 'Enriqueta', serif;
+    font-weight: 300;
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+.fa-twitter {
+    padding: 10px 10px 7px 10px;
+    -o-transition: .5s;
+    -ms-transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
+    transition: .5s;
+    // background-color: rgb(95, 94, 95);
+}
+
+.fa-twitter:hover {
+    background-color: #00aced;
+}
+
+.fa-youtube {
+    padding: 10px 12px 7px 11px;
+    -o-transition: .5s;
+    -ms-transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
+    transition: .5s;
+    // background-color: rgb(95, 94, 95);
+}
+
+.fa-youtube:hover {
+    background-color: #e64a41;
+}
+
+.fa-linkedin {
+    padding: 10px 11px 8px 11px;
+    -o-transition: .5s;
+    -ms-transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
+    transition: .5s;
+    // background-color: rgb(95, 94, 95);
+}
+
+.fa-linkedin:hover {
+    background-color: #0073a4;
+}
+
+a:hover {
+    border-bottom: rgb(104, 114, 107) solid 1px;
+    transition: all 5s;
+}
+
+.clearfix {
+    content: '';
+    display: table;
+    clear: both;
+}
