--- a/template/blog.html
+++ b/template/blog.html
@@ -30,8 +30,8 @@
                 <li>
                     <a href="https://www.linkedin.com/in/kristennleake" class="social-icon"> <i class="fa fa-linkedin"></i></a>
                 </li>
-        </ul>
-    </div>
+                <!-- </ul> -->
+                <!-- </div> -->
     </div>
     <!--////////// Nav bar ends /////////////-->
     <div class="banner">
