--- a/template/portfolio.html
+++ b/template/portfolio.html
@@ -3,46 +3,67 @@
 
 <head>
     <link rel="stylesheet" href="../css/index.css" class="rel">
-    <link rel="stylesheet" href="portfolio.js" class="rel">
+    <!-- <link rel="stylesheet" href="portfolio.js" class="rel"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Enriqueta:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-    <div id="portfolio">
+    <!--////////// Nav bar /////////////-->
+    <div class="collapse navbar-collapse" id=bs-example-collapse-navbar1>
+        <ul>
+            <li><a href="../index.html">Home</li></a>
+                <li><a href="../template/about.html">About</a></li>
+                <li><a href="../template/portfolio.html">Portfolio</a></li>
+                <!-- <li><a href="template/blog.html">Blog</a></li> -->
+                <li><a href="#contact">Contact</a></li>
+                <!-- <ul class="social-icons"> -->
+                <li>
+                    <a href="https://twitter.com/Kristen_Leake" class="social-icon"> <i class="fa fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCa7Jny01FDsAD5M2zid1znw" class="social-icon"> <i class="fa fa-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/kristennleake" class="social-icon"> <i class="fa fa-linkedin"></i></a>
+                </li>
+                <!-- </ul> -->
+    </div>
+    <!--////////// Nav bar ends /////////////-->
+    <div id="portfolio" class="clearfix">
         <!-- //// PORTFOLIO BEGINS //// -->
         <!-- /////// THUMBNAILS ////// -->
         <!-- MAKE THESE THUMBNAILS HAVE ROUNDED CORNERS! -->
         <div id="project1" class="col-xs-6 col-sm-4">
             <a href="About.html">
                 <div class="button hvr-float-shadow">
-                    <img src="img/Faye_Web.png" alt="Kristen" class="img-responsive" width="387" height="275">
+                    <img src="../img/Faye_Web.png" alt="Kristen" class="img-responsive" width="387" height="275">
                 </div>
             </a>
         </div>
         <div id="project2" class="col-xs-6 col-sm-4">
             <a href="portfolio.html">
                 <div class="button hvr-float-shadow">
-                    <img src="img/Revolution_Revisited.png" alt="Revolution" class="img-responsive" width="387" height="275">
+                    <img src="../img/Revolution_Revisited.png" alt="Revolution" class="img-responsive" width="387" height="275">
                 </div>
             </a>
         </div>
         <div id="project3" class="col-xs-6 col-sm-4">
             <a href="blog.html">
                 <div class="button hvr-float-shadow">
-                    <img src="img/Good_Coffee_1.png" alt="Coffee" class="img-responsive" width="387" height="275">
+                    <img src="../img/Good_Coffee_1.png" alt="Coffee" class="img-responsive" width="387" height="275">
                 </div>
             </a>
         </div>
         <div id="project4" class="col-xs-6 col-sm-4">
             <a href="https://github.com/KristenLeake">
                 <div class="button hvr-float-shadow">
-                    <img src="img/Twitter_Replica.png" alt="Github" class="img-responsive" width="387" height="275">
+                    <img src="../img/Twitter_Replica.png" alt="Github" class="img-responsive" width="387" height="275">
                 </div>
             </a>
         </div>
         <!--  //// PORTFOLIO ENDS //// -->
-
+</body>
 
 </html>
